fix(core-price-lockup): fixing horizontal alignment issue
wrapped a div with inline-block and alignment left to account FlexGrid Row horizontal alignment changes

--- a/packages/PriceLockup/PriceLockup.modules.scss
+++ b/packages/PriceLockup/PriceLockup.modules.scss
@@ -1,6 +1,11 @@
 @import '~@tds/core-responsive/responsive';
 @import '../../shared/scss/typography';
 
+.wrapperAlignment {
+  text-align: left;
+  display: inline-block;
+}
+
 .priceValueSign {
   line-height: 1;
 }
